--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inlämningsuppgift 2 - Kundprojekt</title>
+  <title>Inlämningsuppgift 2 - Kundprojekt.</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-  
+
 </body>
 </html>
