added: intro till att koda except reset

--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
   <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-  <h1>Testar</h1>
-<p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque esse consequatur id perferendis sed soluta cupiditate placeat accusamus reprehenderit libero nesciunt sapiente veritatis, odio dolore deleniti sint possimus iure repellat.</p>
+
+  <main>
+    <header>
+      <nav>
+        <div>Menyburgare</div>
+      </nav>
+      <h1>Tough cookie</h1>
+    </header>
+  
+    <div class="page1">
+      <section class="top">
+        <div class="page-title">Tahini drizzle chickpeas</div>
+        <p class="text">Brödtextblock</p>
+      </section>
+      <section class="bottom">
+        <div class="image">med bild på sallad inuti + pil</div>
+        <p class="text">brödtextblock 2</p>
+      </section>
+    </div>
+  </main>
+  
+
+  
 </body>
 </html>
