added CSS reset "normalize"

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inlämningsuppgift 2 - Kundprojekt.</title>
+  <link rel="stylesheet" href="css/normalize.css" type="text/css"> <!--OBS vill ha denna högst upp för att CSS topdown-->
   <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -12,6 +13,13 @@
     <header>
       <nav>
         <div>Menyburgare</div>
+        <!-- Ta bort div m burgare? -->'
+        <button>
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
       </nav>
       <h1>Tough cookie</h1>
     </header>
