--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <nav>
         <div>Menyburgare</div>
-        <!-- Ta bort div m burgare? -->'
+        <!-- Ta bort div m burgare? -->
         <button>
           <span></span>
           <span></span>
