--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <nav>
         <div>Menyburgare</div>
         <!-- Ta bort div m burgare? -->
+
+        <input type="checkbox">
+
+
         <button>
           <span></span>
           <span></span>
@@ -30,7 +34,7 @@
         <p class="text">Brödtextblock</p>
       </section>
       <section class="bottom">
-        <div class="image">med bild på sallad inuti + pil</div>
+        <div class="image">bild på sallad inuti + pil</div>
         <p class="text">brödtextblock 2</p>
       </section>
     </div>
