--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
           <span></span>
         </button>
 
+        <nav class="menu">
+          <ul>
+            <li>Hem</li>
+            <li>Om oss</li>
+            <li>Kontakt</li>
+          </ul>
+        </nav>
+
       </nav>
       <h1>Tough cookie</h1>
     </header>
