--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
 
         <input type="checkbox">
 
+        <div class="meny">
+          <button>
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+  
+          <nav class="menu">
+            <ul>
+              <li>Hem</li>
+              <li>Om oss</li>
+              <li>Kontakt</li>
+            </ul>
+          </nav>
+        </div>
 
-        <button>
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-
-        <nav class="menu">
-          <ul>
-            <li>Hem</li>
-            <li>Om oss</li>
-            <li>Kontakt</li>
-          </ul>
-        </nav>
+      
 
       </nav>
       <h1>Tough cookie</h1>
