adjusted menu classes - nav/div

--- a/index.html
+++ b/index.html
@@ -11,20 +11,17 @@
 
   <main>
     <header>
-      <nav>
-        <div>Menyburgare</div>
-        <!-- Ta bort div m burgare? -->
 
         <input type="checkbox">
 
-        <div class="meny">
+        <div class="menu">
           <button>
             <span></span>
             <span></span>
             <span></span>
           </button>
   
-          <nav class="menu">
+          <nav>
             <ul>
               <li>Hem</li>
               <li>Om oss</li>
@@ -34,8 +31,6 @@
         </div>
 
       
-
-      </nav>
       <h1>Tough cookie</h1>
     </header>
   
