added vertical desktop h1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         </div>
 
       
-      <h1>Tough cookie</h1>
+      <h1>
+        <span>tough</span>
+        <span>cookie</span>
+      </h1>
     </header>
   
     <div class="page1">
