--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section class="bottom">
         <div class="image">bild på sallad inuti + pil</div>
         <p class="text">Crispy iceberg lettuce Caribbean red habanero blueberry chia seed jam overflowing berries roasted butternut squash basmati thyme hummus falafel bowl cosy butternut cilantro lime vinaigrette heat mint potato chocolate cookie seeds samosa walnut mushroom tart.</p>
-        <a href="#">explore menu <img src="icons/" alt=""></a>
+        <a href="#">explore menu </a> <!--Lägg in ikon PIL-->
       </section>
     </div>
   </main>
