--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Inlämningsuppgift 2 - Kundprojekt.</title>
   <link rel="stylesheet" href="css/normalize.css" type="text/css"> <!--OBS vill ha denna högst upp för att CSS topdown-->
   <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jockey One|Roboto Condensed">
+
 </head>
 <body>
 
