adjusted p .text mobile & tablet

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
   
     <div class="page1">
       <section class="top">
-        <div class="page-title">Tahini drizzle chickpeas</div>
+        <h2 class="page-title"> 
+          <span>tahini</span>
+          <span>drizzle</span>
+          <span>chickpeas</span>
+        </h2>
         <p class="text">Main course hemp seeds Southern Italian shiitake mushrooms a delicious meal banana bread lemon tahini dressing apple vinaigrette veggie burgers cool cucumbers coconut sugar. Seasonal edamame hummus asian pear kale bite sized ghost pepper one bowl mediterranean luxury bowl cayenne Thai sun pepper</p>
       </section>
       <section class="bottom">
