added div page2

--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
         </a> <!--Lägg in ikon PIL, byt ut, inte bild -->
       </section>
     </div>
+
+    <div class="page2">
+      
+
+    </div>
+
+
+
+
   </main>
   
 
