added Sass to menu items

--- a/index.html
+++ b/index.html
@@ -68,23 +68,23 @@
 
       <article class="menu-items">
         <h3 class="name">halloumi moklieh</h3>
-        <p class="about">deep-fried halloumi</p>
+        <p class="about">Deep-fried halloumi</p>
         <span class="price">195 kr</span>
       
         <h3 class="name">mojaddara</h3>
-        <p class="about">green lentis with rice and fried onion</p>
+        <p class="about">Green lentis with rice and fried onion</p>
         <span class="price">135 kr</span>
 
         <h3 class="name">chiar & laban</h3>
-        <p class="about">lebanese spicy yoghurt with chopped cucumber</p>
+        <p class="about">Lebanese spicy yoghurt with chopped cucumber</p>
         <span class="price">95 kr</span>
 
         <h3 class="name">warak inab</h3>
-        <p class="about">rice- and veggie-filled dolma with mint and lemon</p>
+        <p class="about">Rice- and veggie-filled dolma with mint and lemon</p>
         <span class="price">85 kr</span>
 
         <h3 class="name">moutabbal batinzian</h3>
-        <p class="about">smoked chopped aubergine, sesame paste, garlic and lemon</p>
+        <p class="about">Smoked chopped aubergine, sesame paste, garlic and lemon</p>
         <span class="price">175 kr</span>
 
         <h3 class="name">ardishoki</h3>
