added tags, correct names not colors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Inlämningsuppgift 2 - Kundprojekt.</title>
   <link rel="stylesheet" href="css/normalize.css" type="text/css"> <!--OBS vill ha denna högst upp för att CSS topdown-->
   <link rel="stylesheet" href="css/style.css" type="text/css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jockey One|Roboto Condensed">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jockey One|Roboto Condensed|Courier Prime">
 
 </head>
 <body>
@@ -68,6 +68,9 @@
 
       <article class="menu-items">
         <h3 class="name">halloumi moklieh</h3>
+        <span class="tag">
+          <span>new!</span>
+        </span> 
         <p class="about">Deep-fried halloumi</p>
         <span class="price">195 kr</span>
       
@@ -84,10 +87,16 @@
         <span class="price">85 kr</span>
 
         <h3 class="name">moutabbal batinzian</h3>
+        <span class="tag">
+          <span>vegan</span>
+        </span> 
         <p class="about">Smoked chopped aubergine, sesame paste, garlic and lemon</p>
         <span class="price">175 kr</span>
 
         <h3 class="name">ardishoki</h3>
+        <span class="tag">
+          <span>popular</span>
+        </span> 
         <p class="about">Artichoke with lemon and garlic marinade</p>
         <span class="price">99 kr</span>
 
