before adjusting .new tag

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <article class="menu-items">
         <h3 class="name">halloumi moklieh</h3>
         <span class="tag">
-          <span>new!</span>
+          <span class="new">new!</span>
         </span> 
         <p class="about">Deep-fried halloumi</p>
         <span class="price">195 kr</span>
