styled all tags

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
         <h3 class="name">moutabbal batinzian</h3>
         <span class="tag">
-          <span>vegan</span>
+          <span class="veg">vegan</span>
         </span> 
         <p class="about">Smoked chopped aubergine, sesame paste, garlic and lemon</p>
         <span class="price">175 kr</span>
 
         <h3 class="name">ardishoki</h3>
         <span class="tag">
-          <span>popular</span>
+          <span class="pop">popular</span>
         </span> 
         <p class="about">Artichoke with lemon and garlic marinade</p>
         <span class="price">99 kr</span>
