--- a/index.html
+++ b/index.html
@@ -108,7 +108,47 @@
       </article>
 
     </div>
+<!--
+    <div class="page3">
+      <h4>Book your table</h4>
+      <div class="contact">
+        <form>
+          <label>
+            <span>Namn</span>
+            <input class="form-input" type="text" placeholder="För- och efternamn">
+          </label>
+          <label>
+            <span>Email</span>
+            <input type="email" placeholder="emailadess">
+          </label>
+          <label>
+            <span>Telenr</span>
+            <input type="tel" placeholder="Telefonnummr">
+          </label>
+          <label>
+            <span>Date</span>
+            <input type="date" placeholder="DAtum">
+          </label>
+          <label>
+            <span>Party size</span>
+            <input type="number" placeholder="partysize">
+          </label>
+          <label>
+            <span>Allgergies</span>
+            <input type="text" placeholder="allergies">
+          </label>
 
+          <div class="buttons">
+            <input type="submit" value="Request">
+            <input type="reset" value="Cancel">
+          </div>
+          
+        </form>
+
+
+      </div>
+    </div>
+  -->
 
 
 
