added class name (form) - not working

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </article>
 
     </div>
-<!--
+<!-- KLASSER PÅ ALLA INPUT NU
     <div class="page3">
       <h4>Book your table</h4>
       <div class="contact">
@@ -119,28 +119,28 @@
           </label>
           <label>
             <span>Email</span>
-            <input type="email" placeholder="emailadess">
+            <input class="form-input" type="email" placeholder="emailadess">
           </label>
           <label>
             <span>Telenr</span>
-            <input type="tel" placeholder="Telefonnummr">
+            <input class="form-input" type="tel" placeholder="Telefonnummr">
           </label>
           <label>
             <span>Date</span>
-            <input type="date" placeholder="DAtum">
+            <input class="form-input" type="date" placeholder="DAtum">
           </label>
           <label>
             <span>Party size</span>
-            <input type="number" placeholder="partysize">
+            <input class="form-input" type="number" placeholder="partysize">
           </label>
           <label>
             <span>Allgergies</span>
-            <input type="text" placeholder="allergies">
+            <input class="form-input" type="text" placeholder="allergies">
           </label>
 
           <div class="buttons">
-            <input type="submit" value="Request">
-            <input type="reset" value="Cancel">
+            <input class="form-button" type="submit" value="Request">
+            <input class="form-button" type="reset" value="Cancel">
           </div>
           
         </form>
@@ -148,7 +148,7 @@
 
       </div>
     </div>
-  -->
+  --> 
 
 
 
