added help from Jenni

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <a href="#">explore menu 
           <img src="assets/img/arrow-forward.png" alt="icon arrow forward" >
         </a> <!--Lägg in ikon PIL, byt ut, inte bild -->
+        <!--Kanske <i class="icon-arrow-forward"></i> eller inte "icon?"-->
       </section>
     </div>
 
@@ -107,7 +108,7 @@
       
       </article>
 
-    </div>
+    </div> <!--Mitt formulär verkar inte fungera pga min input i meny-->
 <!-- KLASSER PÅ ALLA INPUT NU
     <div class="page3">
       <h4>Book your table</h4>
@@ -149,6 +150,7 @@
       </div>
     </div>
   --> 
+    <!--Kan <input type="text" aria-label="Sök" /> hjälpa?-->
 
 
 
