first try grid page2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="page2">
       <div class="page2-images">
-        <img class="p2" src="assets/img/chickpeabowl.jpg" alt="bowl with different veggies" width="800" height="1000">
+        <img class="p2-1" src="assets/img/chickpeabowl.jpg" alt="bowl with different veggies" width="800" height="1000">
         <img class="p2-middle" src="assets/img/hummus.jpg" alt="bowl with hummus topped with chickpeas and coriander" width="1000" height="773">
         <img class="p2" src="assets/img/chunkydips.jpg" alt="different bowls with dip and salsa" width="800" height="1067" >
       </div>
