added grid page2

--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
           <img src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640">
         </div>
         <p class="text">Crispy iceberg lettuce Caribbean red habanero blueberry chia seed jam overflowing berries roasted butternut squash basmati thyme hummus falafel bowl cosy butternut cilantro lime vinaigrette heat mint potato chocolate cookie seeds samosa walnut mushroom tart.</p>
-        <a href="#">explore menu 
-          <img src="assets/img/arrow-forward.png" alt="icon arrow forward" >
-        </a> <!--Lägg in ikon PIL, byt ut, inte bild -->
+        <a href="#">explore menu</a> <!--Lägg in ikon PIL, byt ut, inte bild -->
         <!--Kanske <i class="icon-arrow-forward"></i> eller inte "icon?"-->
       </section>
     </div>
