--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
 
         <input type="checkbox">
+        <!--Bättre att sätta klass på denna input än form-->
 
         <div class="menu">
           <button>
@@ -66,10 +67,13 @@
       </div>
 
       <article class="menu-items">
-        <h3 class="name">halloumi moklieh</h3>
-        <span class="tag">
-          <span class="new">new!</span>
-        </span> 
+        <!--h3 / span egen div som sträcker sig över 4 kolumner-->
+        <div class="tags">
+          <h3 class="name">halloumi moklieh</h3>
+          <span class="tag">
+            <span class="new">new!</span>
+          </span>
+        </div>
         <p class="about">Deep-fried halloumi</p>
         <span class="price">195 kr</span>
       
@@ -85,17 +89,21 @@
         <p class="about">Rice- and veggie-filled dolma with mint and lemon</p>
         <span class="price">85 kr</span>
 
-        <h3 class="name">moutabbal batinzian</h3>
-        <span class="tag">
-          <span class="veg">vegan</span>
-        </span> 
-        <p class="about">Smoked chopped aubergine, sesame paste, garlic and lemon</p>
+        <div class="tags">
+          <h3 class="name">moutabbal batinzian</h3>
+          <span class="tag">
+            <span class="veg">vegan</span>
+          </span> 
+        </div>  
+          <p class="about">Smoked chopped aubergine, sesame paste, garlic and lemon</p>
         <span class="price">175 kr</span>
 
-        <h3 class="name">ardishoki</h3>
-        <span class="tag">
-          <span class="pop">popular</span>
-        </span> 
+        <div class="tags">
+          <h3 class="name">ardishoki</h3>
+          <span class="tag">
+            <span class="pop">popular</span>
+          </span> 
+        </div>  
         <p class="about">Artichoke with lemon and garlic marinade</p>
         <span class="price">99 kr</span>
 
