added grov skiss page3

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <main>
     <header>
 
-        <input type="checkbox">
+        <input class="hamburger" type="checkbox">
         <!--Bättre att sätta klass på denna input än form-->
 
         <div class="menu">
@@ -115,34 +115,34 @@
       </article>
 
     </div> <!--Mitt formulär verkar inte fungera pga min input i meny-->
-<!-- KLASSER PÅ ALLA INPUT NU
+
     <div class="page3">
       <h4>Book your table</h4>
       <div class="contact">
         <form>
           <label>
             <span>Namn</span>
-            <input class="form-input" type="text" placeholder="För- och efternamn">
+            <input type="text" placeholder="För- och efternamn">
           </label>
           <label>
             <span>Email</span>
-            <input class="form-input" type="email" placeholder="emailadess">
+            <input type="email" placeholder="emailadess">
           </label>
           <label>
             <span>Telenr</span>
-            <input class="form-input" type="tel" placeholder="Telefonnummr">
+            <input type="tel" placeholder="Telefonnummr">
           </label>
           <label>
             <span>Date</span>
-            <input class="form-input" type="date" placeholder="DAtum">
+            <input type="date" placeholder="DAtum">
           </label>
           <label>
             <span>Party size</span>
-            <input class="form-input" type="number" placeholder="partysize">
+            <input type="number" placeholder="partysize">
           </label>
           <label>
             <span>Allgergies</span>
-            <input class="form-input" type="text" placeholder="allergies">
+            <input type="text" placeholder="allergies">
           </label>
 
           <div class="buttons">
@@ -155,7 +155,7 @@
 
       </div>
     </div>
-  --> 
+  
     <!--Kan <input type="text" aria-label="Sök" /> hjälpa?-->
 
 
