added vertical form structure

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     </div> <!--Mitt formulär verkar inte fungera pga min input i meny-->
 
     <div class="page3">
-      <h4>Book your table</h4>
-      <div class="contact">
+      <span class="contact">
+        <h4>Book your table</h4>
         <form>
           <label>
             <span>Namn</span>
@@ -146,12 +146,16 @@
           </label>
 
           <div class="buttons">
-            <input class="form-button" type="submit" value="Request">
             <input class="form-button" type="reset" value="Cancel">
+            <input class="form-button" type="submit" value="Request">
           </div>
           
         </form>
 
+
+      </span>
+      <div class="img-p3">
+        <img src="assets/img/tablesetting.jpg" alt="background photo of a restaurant and tablesetting" width="1000" height="667">
 
       </div>
     </div>
