added fixed nav

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       
       </article>
 
-    </div> <!--Mitt formulär verkar inte fungera pga min input i meny-->
+    </div> <!--Ta bort PLACEHOLDERS-->
 
     <div class="page3">
       <span class="contact">
