--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
 
       </div>
     </div>
+
+      <div class="cookies">
+        <p> <!--Ska jag byta?-->
+          You should accept cookies.
+        </p>
+
+        <div class="cookie-buttons">
+          <input type="reset" value="decline">
+          <input type="submit" value="accept">
+          
+        </div>
+
+      </div>
+    
   
     <!--Kan <input type="text" aria-label="Sök" /> hjälpa?-->
 
