--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
         <p class="text">Main course hemp seeds Southern Italian shiitake mushrooms a delicious meal banana bread lemon tahini dressing apple vinaigrette veggie burgers cool cucumbers coconut sugar. Seasonal edamame hummus asian pear kale bite sized ghost pepper one bowl mediterranean luxury bowl cayenne Thai sun pepper</p>
       </section>
       <section class="bottom">
-        <div class="page1-img">
-          <img src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640">
+        <div class="page1-img"> <!--Ta bort bild & kör bakgrund?
+          <img src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640">-->
+          <div class="arrow">
+            <img src="assets/icons/arrow.svg" alt="decorative arrow pointing down" width="72" height="59">
+          </div>
         </div>
         <p class="text">Crispy iceberg lettuce Caribbean red habanero blueberry chia seed jam overflowing berries roasted butternut squash basmati thyme hummus falafel bowl cosy butternut cilantro lime vinaigrette heat mint potato chocolate cookie seeds samosa walnut mushroom tart.</p>
         <a href="#">explore menu</a> <!--Lägg in ikon PIL, byt ut, inte bild -->
