added "names" in form

--- a/index.html
+++ b/index.html
@@ -128,27 +128,27 @@
         <form>
           <label>
             <span>Namn</span> <!--Tagit bort placeholders-->
-            <input type="text">
+            <input type="text" name="name">
           </label>
           <label>
             <span>Email</span>
-            <input type="email">
+            <input type="email" name="email">
           </label>
           <label>
             <span>Telenr</span>
-            <input type="tel">
+            <input type="tel" name="phone">
           </label>
           <label>
             <span>Date</span>
-            <input type="date">
+            <input type="date" name="booking_date">
           </label>
           <label>
             <span>Party size</span>
-            <input type="number">
+            <input type="number" name="quantity">
           </label>
           <label>
             <span>Allgergies</span>
-            <input type="text">
+            <input type="text" name="comments">
           </label>
 
           <div class="buttons">
