--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="menu-items">
-        <div class="test">
+        <div class="item">
           <div class="tags">
             <h3 class="name">Halloumi moklieh</h3>
             <span class="tag">
@@ -84,22 +84,22 @@
           <p class="about">Deep-fried halloumi</p>
           <span class="price">195 kr</span>
         </div>
-        <div class="test">
+        <div class="item">
           <h3 class="name">Mojaddara</h3>
           <p class="about">Green lentis with rice and fried onion</p>
           <span class="price">135 kr</span>
         </div>
-        <div class="test">
+        <div class="item">
           <h3 class="name">Chiar & laban</h3>
           <p class="about">Lebanese spicy yoghurt with chopped cucumber</p>
           <span class="price">95 kr</span>
         </div>
-        <div class="test">
+        <div class="item">
           <h3 class="name">Warak inab</h3>
           <p class="about">Rice- and veggie-filled dolma with mint and lemon</p>
           <span class="price">85 kr</span>
         </div>
-        <div class="test">
+        <div class="item">
           <div class="tags">
             <h3 class="name">Moutabbal batinzian</h3>
             <span class="tag">
@@ -109,7 +109,7 @@
             <p class="about">Smoked chopped aubergine, sesame paste, garlic and lemon</p>
           <span class="price">175 kr</span>
         </div>  
-        <div class="test">
+        <div class="item">
           <div class="tags">
             <h3 class="name">Ardishoki</h3>
             <span class="tag">
@@ -119,7 +119,7 @@
           <p class="about">Artichoke with lemon and garlic marinade</p>
           <span class="price">99 kr</span>
         </div>   
-        <div class="test">
+        <div class="item">
           <h3 class="name">Mhamara</h3>
           <p class="about">Spicy bell pepper relish with crushed walnuts and pomegranate syrup</p>
           <span class="price">123 kr</span>
