added tahini drizzle chickpeas

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
   
     <div class="page1">
       <section class="top">
-        <h2 class="page-title"> 
-          <span>tahini</span>
-          <span>drizzle</span>
-          <span>chickpeas</span>
-        </h2>
+        <div class="page-title"> <!--T-D-C-->
+          <div>
+            <span class="tahini">Tahini</span>
+            <span class="drizzle">Drizzle</span>
+            <span class="chickpeas">Chickpeas</span>
+          </div>
+        </div>
         <p class="text">Main course hemp seeds Southern Italian shiitake mushrooms a delicious meal banana bread lemon tahini dressing apple vinaigrette veggie burgers cool cucumbers coconut sugar. Seasonal edamame hummus asian pear kale bite sized ghost pepper one bowl mediterranean luxury bowl cayenne Thai sun pepper</p>
       </section>
       <section class="bottom">
