adjusted z-index. removed photos & text

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </section>
       <section class="bottom">
         <div class="page1-img"> 
-          <img src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640">
+          <img class="lettuce" src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640">
           <div class="desktop-only">
             <div class="arrow">
               <img src="assets/icons/arrow.svg" alt="decorative arrow pointing down" width="72" height="59">
