påbörjad design page3

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <h4>Book your table</h4>
         <form>
           <label>
-            <span>Namn</span> <!--Tagit bort placeholders-->
+            <span>Name</span> <!--Tagit bort placeholders-->
             <input type="text" name="name">
           </label>
           <label>
@@ -144,7 +144,7 @@
             <input type="email" name="email">
           </label>
           <label>
-            <span>Telenr</span>
+            <span>Phone</span>
             <input type="tel" name="phone">
           </label>
           <label>
@@ -161,8 +161,8 @@
           </label>
 
           <div class="buttons">
-            <input class="form-button" type="reset" value="Cancel">
-            <input class="form-button" type="submit" value="Request">
+            <input class="form-button cancel-button" type="reset" value="Cancel">
+            <input class="form-button request-button" type="submit" value="Request">
           </div>
           
         </form>
