--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </div>
         </div>
           <p class="text">Crispy iceberg lettuce Caribbean red habanero blueberry chia seed jam overflowing berries roasted butternut squash basmati thyme hummus falafel bowl cosy butternut cilantro lime vinaigrette heat mint potato chocolate cookie seeds samosa walnut mushroom tart.</p>
-          <a href="#" class="menu-link">explore menu
+          <a href="#" class="menu-link">Explore menu
             <img src="assets/icons/arrow-forward.svg" alt="a forward pointing arrow">
           </a> 
         
