--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span>Cookie</span>
       </h1>
 
-        <input class="hamburger" type="checkbox" name="hamburger-menu">
+        <input class="hamburger" type="checkbox" name="hamburger">
         <!--Bättre att sätta klass på denna input än form-->
 
         <div class="menu"> <!--Knapp:Glöm ej a11y-->
@@ -44,11 +44,11 @@
     <div class="page1">
       <section class="top">
         <div class="page-title"> <!--T-D-C-->
-          <div>
+          <h2>
             <span class="tahini">Tahini</span>
             <span class="drizzle">Drizzle</span>
             <span class="chickpeas">Chickpeas</span>
-          </div>
+          </h2>
         </div>
         <p class="text">Main course hemp seeds Southern Italian shiitake mushrooms a delicious meal banana bread lemon tahini dressing apple vinaigrette veggie burgers cool cucumbers coconut sugar. Seasonal edamame hummus asian pear kale bite sized ghost pepper one bowl mediterranean luxury bowl cayenne Thai sun pepper</p>
       </section>
