added aria-label button

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         <!--Bättre att sätta klass på denna input än form-->
 
         <div class="menu"> <!--Knapp:Glöm ej a11y-->
-          <button>
+          <button aria-label="toggle menu">
             <span></span>
             <span></span>
             <span></span>
           </button>
+          <!--Lägga klass i span? "line"?-->
   
           <nav>
             <ul>
