added bakgroundimg page3

--- a/index.html
+++ b/index.html
@@ -173,34 +173,38 @@
 
       </span>
       <section class="img-p3">
+        <div class="table">
+          <ul class="contact-info">
+            <li>
+              <a href="#" title="Phone number">
+                <span class="material-symbols-outlined">
+                call
+                </span>
+                tel:+46 81234567
+              </a>
+            </li>
+            <li>
+              <a href="#" title="Email us">
+                <span class="material-symbols-outlined">
+                alternate_email
+                </span>
+                book@toughcookie.com
+              </a>
+            </li>
+            <li>
+              <a href="#" title="Phone number">
+                <span class="material-symbols-outlined">
+                location_on
+                </span>
+                Brända Tomten <br> 111 31 Stockholm
+              </a>
+            </li>
+  
+          </ul>
+        </div>
         <!--<img src="assets/img/tablesetting.jpg" alt="background photo of a restaurant and tablesetting" width="1000" height="667">--> 
-        <ul class="contact-info">
-          <li>
-            <a href="#" title="Phone number">
-              <span class="material-symbols-outlined">
-              call
-              </span>
-              tel:+46 81234567
-            </a>
-          </li>
-          <li>
-            <a href="#" title="Email us">
-              <span class="material-symbols-outlined">
-              alternate_email
-              </span>
-              book@toughcookie.com
-            </a>
-          </li>
-          <li>
-            <a href="#" title="Phone number">
-              <span class="material-symbols-outlined">
-              location_on
-              </span>
-              Brända Tomten <br> 111 31 Stockholm
-            </a>
-          </li>
-
-        </ul>
+       
+    
 
       </section>
     </div>
