added classes to nav: ul+li

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <!--Lägga klass i span? "line"?-->
   
           <nav>
-            <ul>
-              <li>Home</li>
-              <li>Menu</li>
-              <li>Book table</li>
+            <ul class="options">
+              <li class="menu-list">Home</li>
+              <li class="menu-list">Menu</li>
+              <li class="menu-list">Book table</li>
             </ul>
           </nav>
         </div>
