changed title names in contact info

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="table">
           <ul class="contact-info">
             <li class="contact-list">
-              <a href="#" title="Phone number">
+              <a href="#" title="Call us">
                 <span class="material-symbols-outlined">
                 call
                 </span>
@@ -192,7 +192,7 @@
               </a>
             </li>
             <li class="contact-list">
-              <a href="#" title="Phone number">
+              <a href="#" title="Find us">
                 <span class="material-symbols-outlined">
                 location_on
                 </span>
