added hover-effect in menu-list

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
   
           <nav>
             <ul class="options">
-              <li class="menu-list">Home</li>
-              <li class="menu-list">Menu</li>
-              <li class="menu-list">Book table</li>
+              <li class="menu-list">
+                <a href="#">Home</a>
+              </li>
+              <li class="menu-list">
+                <a href="#">Menu</a>
+              </li>
+              <li class="menu-list">
+                <a href="#">Book table</a>
+              </li>
             </ul>
           </nav>
         </div>
