adjusted font-size

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <span class="chickpeas">Chickpeas</span>
           </h2>
         </div>
-        <p class="text">Main course hemp seeds Southern Italian shiitake mushrooms a delicious meal banana bread lemon tahini dressing apple vinaigrette veggie burgers cool cucumbers coconut sugar. Seasonal edamame hummus asian pear kale bite sized ghost pepper one bowl mediterranean luxury bowl cayenne Thai sun pepper</p>
+        <p class="text">Main course hemp seeds Southern Italian shiitake mushrooms a delicious meal banana bread lemon tahini dressing apple vinaigrette veggie burgers cool cucumbers coconut sugar. Seasonal edamame hummus asian pear kale bite sized ghost pepper one bowl mediterranean luxury bowl cayenne Thai sun pepper.</p>
       </section>
       <section class="bottom">
         <div class="page1-img"> 
