--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
           <img class="lettuce" src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640">
           <div class="desktop-only">
             <div class="arrow">
-              <img src="assets/icons/arrow.svg" alt="decorative arrow pointing down" width="72" height="59">
+              <img src="assets/icons/arrow.svg" alt="decorative white arrow pointing down" width="72" height="59">
             </div>
           </div>
         </div>
           <p class="text">Crispy iceberg lettuce Caribbean red habanero blueberry chia seed jam overflowing berries roasted butternut squash basmati thyme hummus falafel bowl cosy butternut cilantro lime vinaigrette heat mint potato chocolate cookie seeds samosa walnut mushroom tart.</p>
           <a href="#" class="menu-link">Explore menu
-            <img src="assets/icons/arrow-forward.svg" alt="a forward pointing arrow">
+            <img src="assets/icons/arrow-forward.svg" alt="a black forward pointing arrow" width="34" height="30">
           </a> 
         
       </section>
