added loading eager on lettuce

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </section>
       <section class="bottom">
         <div class="page1-img"> 
-          <img class="lettuce" src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640">
+          <img class="lettuce" src="assets/img/lettuce.jpg" alt="picture of lettuce head" width="800" height="640" loading="eager">
           <div class="desktop-only">
             <div class="arrow">
               <img src="assets/icons/arrow.svg" alt="decorative white arrow pointing down" width="72" height="59">
