--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jockey One|Roboto Condensed|Courier Prime">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+  <meta name="description" content>
+  <meta property="og:title" content>
+  <meta property="og:type" content>
+  <meta property="og:url" content>
+  <meta property="og:image" content>
 </head>
 <body>
 
