adjustments meta+structureddata

--- a/index.html
+++ b/index.html
@@ -10,11 +10,32 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-  <meta name="description" content>
-  <meta property="og:title" content>
-  <meta property="og:type" content>
-  <meta property="og:url" content>
-  <meta property="og:image" content>
+  <!--FYLL PÅ META-->
+  <meta name="description" content="xxx">
+  <meta property="og:title" content="xxx">
+  <meta property="og:type" content="xxx">
+  <meta property="og:url" content="xxx">
+  <meta property="og:image" content="xxx">
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Restaurant",
+      "name": "Tough Cookie",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Brända Tomten",
+        "addressLocality": "Stockholm",
+        "postalCode": "111 31",
+        "addressCountry": "SE"
+      },
+      "telephone": "+46 8123 45 67",
+      "url": "https://www.TC.come",
+      "servesCuisine": "Middle Eastern",
+      "priceRange": "$$",
+    }
+    </script>
+
 </head>
 <body>
 
