added id to make sure explore menu goes to page2

--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
           </div>
         </div>
           <p class="text">Crispy iceberg lettuce Caribbean red habanero blueberry chia seed jam overflowing berries roasted butternut squash basmati thyme hummus falafel bowl cosy butternut cilantro lime vinaigrette heat mint potato chocolate cookie seeds samosa walnut mushroom tart.</p>
-          <a href="#" class="menu-link">Explore menu
+          <a href="#page2" class="menu-link">Explore menu
             <img src="assets/icons/arrow-forward.svg" alt="a black forward pointing arrow" width="34" height="30">
           </a> 
         
       </section>
     </div>
 
-    <div class="page2">
+    <div id="page2" class="page2">
       <div class="page2-images">
         <img class="p2-1" src="assets/img/chickpeabowl.jpg" alt="bowl with different veggies" width="800" height="1000">
         <img class="p2-middle" src="assets/img/hummus.jpg" alt="bowl with hummus topped with chickpeas and coriander" width="1000" height="773">
