--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
       </p>
     
       <div class="cookie-buttons">
-        <input type="reset" value="decline">
-        <input type="submit" value="accept">  
+        <input class="decline-button" type="reset" value="decline">
+        <input class="accept-button" type="submit" value="accept">  
       </div>
   
     </div>
