adjusted meta and structured data

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jockey One|Roboto Condensed|Courier Prime">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-  <!--FYLL PÅ META-->
-  <meta name="description" content="xxx">
-  <meta property="og:title" content="xxx">
-  <meta property="og:type" content="xxx">
-  <meta property="og:url" content="xxx">
-  <meta property="og:image" content="xxx">
+  <!--FYLL PÅ META & Structured data-->
+  <meta name="description" content="Webpage for restaurant Tough Cookie. Located in central Stockholm & serves Middle Eastern food at a good price and in a cozy atmosphere. See our menu or book a table.">
+  <meta property="og:title" content="Tough Cookie - Middle Eastern restaurant in Stockholm">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://medieinstitutet.github.io/fed24d-html-css-kundprojekt-oliviaalmseger/">
+  <meta property="og:image" content="https://medieinstitutet.github.io/fed24d-html-css-kundprojekt-oliviaalmseger/assets/img/hummus.jpg">
 
   <script type="application/ld+json">
     {
@@ -29,9 +29,11 @@
         "addressCountry": "SE"
       },
       "telephone": "+46 8123 45 67",
-      "url": "https://www.TC.come",
+      "url": "https://medieinstitutet.github.io/fed24d-html-css-kundprojekt-oliviaalmseger/",
       "servesCuisine": "Middle Eastern",
       "priceRange": "$$",
+      "openingHours": "Mo-Su 12:00-23:00",
+      "image": "https://medieinstitutet.github.io/fed24d-html-css-kundprojekt-oliviaalmseger/assets/img/hummus.jpg"
     }
     </script>
 </head>
