adjusted url for google fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Inlämningsuppgift 2 - Kundprojekt.</title>
   <!--<link rel="stylesheet" href="css/normalize.css" type="text/css"> OBS vill ha denna högst upp för att CSS topdown-->
   <link rel="stylesheet" href="css/style.css" type="text/css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jockey One|Roboto Condensed|Courier Prime">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jockey+One|Roboto+Condensed|Courier+Prime">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
   <!--FYLL PÅ META & Structured data-->
