--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--<link rel="stylesheet" href="css/normalize.css" type="text/css"> OBS vill ha denna högst upp för att CSS topdown-->
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jockey+One|Roboto+Condensed|Courier+Prime">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 
   <!--FYLL PÅ META & Structured data-->
   <meta name="description" content="Webpage for restaurant Tough Cookie. Located in central Stockholm & serves Middle Eastern food at a good price and in a cozy atmosphere. See our menu or book a table.">
